# Provn

./: .gitignore  AGENTS.md  CLAUDE.md  PITCH.md  PROJECT.md  README.md  RELEASING.md  install.sh  leakbench_sample.jsonl  provn.yml
.github/workflows/: provn-ci.yml  release.yml  update-homebrew.yml
aegis-model/: export_gguf.py  generate_leakbench.py  modal_finetune.py
aegis-model/data/: leakbench_eval.jsonl  leakbench_train.jsonl  leakbench_train_balanced.jsonl
homebrew-tap/Formula/: provn.rb
npm/: LICENSE  README.md  package.json  postinstall.js
provn-cli/: Cargo.toml
provn-cli/src/: audit.rs  config.rs  diff.rs  main.rs  policy.rs  redact.rs
provn-cli/src/scanner/: ast.rs  entropy.rs  mod.rs  regex_scan.rs  semantic.rs
scripts/: ci-scan.sh  install-hook.sh  integration-test.sh  run-leakbench.sh  start-semantic-server.sh  update-homebrew-formula.py
