[package]
name = "provn"
version = "0.0.1"
edition = "2021"
description = "Provn pre-commit AI security scanner"

[[bin]]
name = "provn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"
thiserror = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
